# api/src/api/models/ClaimResponse.ts
@@ -1,0 +1,12 @@
+import { IsNotEmpty } from 'class-validator';
+
+export class ClaimResponse {
+
+    @IsNotEmpty()
+    public name: string;
+
+    public toString(): string {
+        return `${this.name}`;
+    }
+
+}
